revise css to prevent x overflow, added screenshot on readme

--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -13,6 +13,7 @@
   display: grid;
   grid-template-columns: auto 1fr;
   align-items: center;
+  box-sizing: border-box;
 }
 
 .logo {
